# gitlab-issue-bridge

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DEPLOY.md  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: build.yml  ci.yml  smoke.yml
crates/bridge-core/: Cargo.toml
crates/bridge-core/src/: config.rs  gitlab.rs  integrations.rs  issue_sync.rs  lib.rs  secrets.rs
docs/: architecture.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.test.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css  types.ts
frontend/src/components/: AppBanner.tsx  AppLoader.tsx  CommentMarkdown.tsx  CreateIssueModal.tsx  HeaderTabs.module.css  IntegrationForm.tsx  InvitationAcceptanceScreen.tsx  IssueAccessPanel.tsx  IssueDetail.tsx  LoginScreen.tsx  MetricCard.tsx  PageState.tsx  PasswordRecoveryRequestScreen.tsx  PasswordResetScreen.tsx  ProjectAccessPanel.tsx  ProjectEditorForm.tsx  StatsGroup.tsx  (+5 more)
frontend/tests/: capability-ui.test.ts  node-test.d.ts
infra/postgres/: Dockerfile
infra/traefik/: dynamic.prod.yml  dynamic.yml
migrations/: 000_create_base_schema.sql  001_create_user_invitations.sql  002_add_project_integration_encrypted_secrets.sql  003_fix_jobs_dedupe_key_unique_index.sql  004_add_users_preferred_language.sql  005_add_project_permissions.sql  006_create_password_reset_tokens.sql  007_add_local_attachment_storage.sql  008_add_issue_comment_discussions.sql  009_add_project_scoped_issue_uploads.sql  010_allow_local_issues_without_gitlab_iid.sql  011_harden_sync_jobs_and_audit.sql  012_add_worker_heartbeats.sql  013_add_attachment_cache_state.sql  014_add_provider_neutral_integrations.sql
scripts/: smoke-compose.sh
services/api/: Cargo.toml  Dockerfile
services/api/src/: app.rs  dto.rs  error.rs  main.rs  schema.rs  state.rs
services/api/src/repositories/: auth.rs
services/api/src/routes/: attachments.rs  auth.rs  docs.rs  health.rs  invitations.rs  issues.rs  jobs.rs  mod.rs  projects.rs  users.rs  webhooks.rs
services/api/src/services/: auth.rs  gitlab.rs  mod.rs  rate_limit.rs
services/worker/: Cargo.toml  Dockerfile
services/worker/src/: app.rs  heartbeat.rs  main.rs  queue.rs  schema.rs  state.rs
services/worker/src/handlers/: sync.rs
(+19 files in other folders)
