[package]
name = "bridge-core"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow.workspace = true
aes-gcm.workspace = true
base64.workspace = true
chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
sqlx.workspace = true
tokio.workspace = true
uuid.workspace = true
